# app/Models/Availability.php
@@ -6,5 +6,9 @@ use Illuminate\Database\Eloquent\Model;
 
 class Availability extends Model
 {
-    //
+    protected $fillable = [
+        'property_id',
+        'start_date',
+        'end_date',
+    ];
 }
